add github-ribbons and the Steirertux ;)

--- a/hex/index.html
+++ b/hex/index.html
@@ -25,6 +25,10 @@
   </head>
   <body>
     <div id='quake' data-source="quakes_christchurch_20100901-20101001_mag-gt3.json"></div>
+
+    <a href="https://github.com/tyrasd/linuxtage-graz-2014"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
+    <a href="http://linuxtage.at"><img style="position: absolute; bottom:20px; right:10px; width:70px; height:90px;" src="http://www.linuxtage.at/logos/steirertux.png" alt="Steirertux" /></a>
+
     <script type="text/javascript">
       (function () {
           var max, scale,
